// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeButton renders correctly default 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0044b8",
      "borderRadius": 16,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 16,
      "width": "100%",
    }
  }
  testID="theme_button_container"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_500Medium",
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "color": "#fafcff",
          },
          undefined,
        ]
      }
    >
      Default Fill Button
    </Text>
  </View>
</View>
`;

exports[`ThemeButton renders correctly in outline mode 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#f6f6f9",
      "borderColor": "#0044b8",
      "borderRadius": 16,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 16,
      "width": "100%",
    }
  }
  testID="theme_button_container"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Montserrat_500Medium",
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "color": "#0044b8",
          },
          undefined,
        ]
      }
    >
      Outline Button
    </Text>
  </View>
</View>
`;
